[gd_scene load_steps=14 format=3 uid="uid://da5fagkp21hyi"]

[ext_resource type="Script" path="res://EditShowings/edit_showings.gd" id="1_5vqx7"]
[ext_resource type="Texture2D" uid="uid://cmfviwdjfkulp" path="res://UI/Images/full_screen_background.png" id="1_l7c4a"]
[ext_resource type="Theme" uid="uid://7ug4svgqw7bl" path="res://UI/Themes/my_header_label_theme.tres" id="2_cl15d"]
[ext_resource type="Theme" uid="uid://bio0np2bdwycd" path="res://UI/Themes/my_label_theme.tres" id="4_bt8pn"]
[ext_resource type="Theme" uid="uid://cepf0eeqt2mpk" path="res://UI/Themes/my_spinbox_theme.tres" id="5_nqdfy"]
[ext_resource type="Theme" uid="uid://85avfn20i7au" path="res://UI/Themes/my_error_label_theme.tres" id="6_0fhlj"]
[ext_resource type="Theme" uid="uid://wgr8ngf3t34r" path="res://UI/Themes/my_button_theme.tres" id="7_hw0om"]
[ext_resource type="PackedScene" uid="uid://dkax421daj48j" path="res://ShowingControls/showing_controls.tscn" id="8_cffk6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdoeq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xosmk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ry86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ple5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24chu"]

[node name="EditShowings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vqx7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.196078, 0.196078, 1)

[node name="Foreground" type="NinePatchRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.046
anchor_right = 0.964
anchor_bottom = 0.954
offset_left = 0.879997
offset_top = 0.319996
offset_right = -0.880127
offset_bottom = -0.320068
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l7c4a")
patch_margin_left = 42
patch_margin_top = 42
patch_margin_right = 42
patch_margin_bottom = 42

[node name="CloseButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.978
anchor_right = 1.0
anchor_bottom = 0.041
offset_left = 31.1598
offset_bottom = -32.18
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cdoeq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xosmk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ry86")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ple5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24chu")

[node name="HeaderLabel" type="Label" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.094
offset_top = 0.400002
offset_bottom = -0.119995
grow_horizontal = 2
theme = ExtResource("2_cl15d")
text = "Header Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlsContainer" type="HBoxContainer" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34
anchor_top = 0.102
anchor_right = 0.66
anchor_bottom = 0.143
offset_left = -0.199951
offset_top = 0.0400085
offset_right = 0.200073
offset_bottom = -0.139984
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="StartLabel" type="Label" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("4_bt8pn")
text = "Start Time: "

[node name="StartHour" type="SpinBox" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("5_nqdfy")
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="Simicolon" type="Label" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("4_bt8pn")
text = ":"

[node name="StartMinute" type="SpinBox" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("5_nqdfy")
max_value = 59.0
step = 15.0

[node name="AmPmOptionButton" type="OptionButton" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "AM"
popup/item_0/id = 0
popup/item_1/text = "PM"
popup/item_1/id = 1

[node name="RunLabel" type="Label" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("4_bt8pn")
text = "Run Time: "

[node name="RunHour" type="SpinBox" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("5_nqdfy")
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="Simicolon2" type="Label" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("4_bt8pn")
text = ":"

[node name="RunMinute" type="SpinBox" parent="Background/Foreground/ControlsContainer"]
layout_mode = 2
theme = ExtResource("5_nqdfy")
max_value = 59.0
step = 15.0

[node name="ErrorLabel" type="Label" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.281
anchor_top = 0.153
anchor_right = 0.719
anchor_bottom = 0.216
offset_left = -0.179993
offset_top = 0.0600128
offset_right = 0.180176
offset_bottom = 0.320023
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_0fhlj")
text = "How big
could th"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AddShowingButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -270.0
offset_right = 150.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_hw0om")
text = "Add Showing"

[node name="ShowingsControlsScrollContainer" type="ScrollContainer" parent="Background/Foreground"]
custom_minimum_size = Vector2(1000, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.225
anchor_top = 0.357
anchor_right = 0.788
anchor_bottom = 0.765
offset_left = -0.5
offset_top = 0.140015
offset_right = 0.360718
offset_bottom = 0.300049
grow_horizontal = 2
grow_vertical = 2

[node name="ShowingsControlsContainer" type="GridContainer" parent="Background/Foreground/ShowingsControlsScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 88

[node name="ShowingControls" parent="Background/Foreground/ShowingsControlsScrollContainer/ShowingsControlsContainer" instance=ExtResource("8_cffk6")]
layout_mode = 2

[node name="BackButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.815
anchor_top = 0.816
anchor_right = 0.983
anchor_bottom = 0.867
offset_left = -0.699951
offset_top = 0.320068
offset_right = 0.26001
offset_bottom = 0.340088
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("7_hw0om")
text = "Back"

[node name="DeleteAllShowingsButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.815
anchor_top = 0.898
anchor_right = 0.983
anchor_bottom = 0.949
offset_left = -0.699951
offset_top = -0.039978
offset_right = 0.26001
offset_bottom = -0.0199585
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("7_hw0om")
text = "Delete All Showings"

[connection signal="pressed" from="Background/Foreground/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Background/Foreground/AddShowingButton" to="." method="_on_add_showing_button_pressed"]
[connection signal="pressed" from="Background/Foreground/BackButton" to="." method="_on_back_button_pressed"]
